[package]
name = "libloading-bindgen"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
syn = { version = "1.0.102", features = ["full", "extra-traits", "visit-mut"] }
bindgen = "0.60.1"
quote = "1.0.21"
thiserror = "1.0.37"
proc-macro2 = "1.0.46"

[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.3.0"
anyhow = "1.0.65"
cbindgen = "0.24.3"

[workspace]
members = ["cargo-libloading-bindgen"]
