[package]
name = "cargo-libloading-bindgen"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
libloading-bindgen = { path = ".." }
regex = "1.6.0"
syn = "1.0.102"
anyhow = "1.0.65"
bindgen = "0.60.1"
quote = "1.0.21"
